valgrind errors since commit a8ec4082
Before the commit array 'f' gets accessed correctly but afterwards there is access to f[4] causing this:
==51297== Conditional jump or move depends on uninitialised value(s)
==51297== at 0x5ED5577: brw_float_to_vf (brw_packed_float.c:41)
==51297== by 0x5F028FD: brw::try_immediate_source(nir_alu_instr const*, brw::src_reg*, bool, gen_device_info const*) (brw_vec4_nir.cpp:1041)
==51297== by 0x5F04DDF: brw::vec4_visitor::nir_emit_alu(nir_alu_instr*) (brw_vec4_nir.cpp:1456)
==51297== by 0x5EFE480: brw::vec4_visitor::nir_emit_instr(nir_instr*) (brw_vec4_nir.cpp:152)
==51297== by 0x5EFE391: brw::vec4_visitor::nir_emit_block(nir_block*) (brw_vec4_nir.cpp:133)
==51297== by 0x5EFE1B0: brw::vec4_visitor::nir_emit_cf_list(exec_list*) (brw_vec4_nir.cpp:88)
==51297== by 0x5EFE0D3: brw::vec4_visitor::nir_emit_impl(nir_function_impl*) (brw_vec4_nir.cpp:70)
==51297== by 0x5EFDEB8: brw::vec4_visitor::emit_nir_code() (brw_vec4_nir.cpp:41)
==51297== by 0x5EE878C: brw::vec4_visitor::run() (brw_vec4.cpp:2674)
==51297== by 0x5EEA7C1: brw_compile_vs (brw_vec4.cpp:3001)
==51297== by 0x53C34A7: brw_codegen_vs_prog (brw_vs.c:188)
==51297== by 0x53C3BA7: brw_vs_precompile (brw_vs.c:355)